Fix the spacing before and after brackets and colons, then add a colon

--- a/css/main.css
+++ b/css/main.css
@@ -1,10 +1,10 @@
-body{
+body {
   background-color: #ccc;
-  font:sans-serif;
+  font: sans-serif;
 }
 
 h1 {
-  font-size: 1.5rem
+  font-size: 1.5rem;
 }
 
 article {
